@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2025-07-23T01:01:01Z",
+  "timestamp" : "2025-07-24T01:00:35Z",
   "count_outdated" : 969,
   "uniques_outdated" : 576,
-  "count" : 982,
-  "uniques" : 589,
+  "count" : 983,
+  "uniques" : 590,
   "clones" : [
     {
       "timestamp": "2025-07-10T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 1,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2025-07-11T00:00:00Z",
@@ -97,6 +97,15 @@
     },
     {
       "timestamp": "2025-07-22T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-07-23T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
